--- a/workspace.yml
+++ b/workspace.yml
@@ -1,14 +1,14 @@
 version: workspaces/v0.1
-name: prodnewtest
+name: prodnewtestnamechanged
 dataset_paths:
-- analyze/datasets
-- .meltano/analyze/datasets
+  - analyze/datasets
+  - .meltano/analyze/datasets
 channel_paths:
-- analyze/channels
+  - analyze/channels
 pipeline_paths:
-- pipeline
+  - pipeline
 plugin_paths:
-- plugins
+  - plugins
 app_properties:
-# This sets the dataset that will be sent with a welcome message to new users joining your workspace
+  # This sets the dataset that will be sent with a welcome message to new users joining your workspace
   WELCOME_DATASET_ALIAS: analyze/datasets/welcome
